--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -49,24 +49,28 @@ header {
                 background-size: contain;
             }
             nav {
-                .hamburger {
-                    display: none;
-                }
                 .logo {
                     height: 8rem;
                 }
-                .desktop-nav {
-                    display: initial;
-                    display: flex;
-                    align-items: center;
-                    li {
-                        margin: 0 1rem;
-                    }
-                }
-                .mobile-cart {
-                    display: none;
-                }
             }
+        }
+    }
+}
+@media screen and (min-width: 64em) {
+    header .header-container nav {
+        .hamburger {
+            display: none;
+        }
+        .desktop-nav {
+            display: initial;
+            display: flex;
+            align-items: center;
+            li {
+                margin: 0 1rem;
+            }
+        }
+        .mobile-cart {
+            display: none;
         }
     }
 }
